@@ -1,0 +1,9 @@
+Title: netapp_api_luns: new check to monitor the filesystem usage of LUNs
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i2
+Date: 1477050849
+Class: feature
+
+
