@@ -1,0 +1,16 @@
+title: NetApp Filers: Used space of LUNs
+agents: netapp
+catalog: hw/storagehw/netapp
+license: GPL
+distribution: check_mk
+description:
+ This check measures the usage of LUNs of Netapp filers running in clustermode.
+ A WATO rule allows you to configure levels for each LUN. You can also configure that no levels
+ should get checked, since some LUNs reported incorrect usage values
+
+item:
+ Name of the LUN as defined in the system
+
+inventory:
+ All LUNs are automatically inventorized.
+
