@@ -13,6 +13,7 @@
     * 3945 fortigate_node: Memory on fortigate clusters are now configurable by WATO...
     * 3956 fileinfo.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
     * 3947 mssql_blocked_sessions: thresholds for wait time can be set now...
+    * 3830 netapp_api_luns: new check to monitor the filesystem usage of LUNs
     * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
     * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
     * 3819 FIX: windows agent: fixed 2 bugs related to mrpe...
